--- a/modules/membership/view/index.html
+++ b/modules/membership/view/index.html
@@ -11,7 +11,7 @@
 
     <div class="message">
         <span>卡内可用服务和次数</span>
-        <a>所有套餐</a>
+        <a ng-click="path('/membership/package')">所有套餐</a>
     </div>
 
     <div class="services">
